--- a/application.yaml
+++ b/application.yaml
@@ -5,4 +5,4 @@ eureka:
      register-with-eureka:  true
      fetch-registry:  true
      serviceUrl:
-       defaultZone:  http://${eureka.instance.hostname}:${server.port}/eureka/
+       defaultZone:  http://locahost:8761/eureka/
