--- a/application.yaml
+++ b/application.yaml
@@ -6,3 +6,19 @@ eureka:
      fetch-registry:  true
      serviceUrl:
        defaultZone:  http://locahost:8761/eureka/
+       
+spring:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console.enabled: true
+    
+management:
+  tracing:
+    sampling:
+      probability: 1.0
