--- a/application.yaml
+++ b/application.yaml
@@ -5,7 +5,7 @@ eureka:
      register-with-eureka:  true
      fetch-registry:  true
      serviceUrl:
-       defaultZone:  http://locahost:8761/eureka/
+       defaultZone:  http://localhost:8761/eureka/
        
 spring:
   datasource:
